# algosul

./: .gitmodules  Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml
.github/workflows/: build.yml  grs.yml  rustfmt.yml
algosul/: Cargo.toml  build.rs
algosul-core/: Cargo.toml
algosul-core/src/: codegen.rs  deps.rs  i18n.rs  lib.rs  macros.rs  utils.rs
algosul-core/src/codegen/: file.rs  filter.rs  fs.rs  ident.rs  module.rs  tokens.rs
algosul-core/src/utils/: std.rs
algosul-derive/: Cargo.toml
algosul-derive/rc/lang/: en-US.toml
algosul-derive/src/: array.rs  filter.rs  from_dir.rs  index.rs  lib.rs
algosul-marco/: Cargo.toml
algosul-marco/src/: i18n.rs  lib.rs
algosul-marco/src/i18n/: attrs.rs
algosul-math/: Cargo.toml
algosul-math/src/: color.rs  lib.rs  num.rs
algosul/src/: app.rs  asset.rs  codegen.rs  deps.rs  i18n.rs  langs.rs  lib.rs  macros.rs  marco.rs  os.rs  process.rs  utils.rs
algosul/src/app/: apps.rs
algosul/src/app/apps/: rust.rs
algosul/src/app/apps/rust/: cargo.rs  rustc.rs  rustup.rs  utils.rs
algosul/src/asset/: image.rs  text.rs
algosul/src/os_impl/desktop/app/apps/: rust.rs
algosul/src/utils/: dynamic.rs  std.rs  tokio.rs
algosul/tests/: asset.rs  i18n.rs
algosul/tests/rc/lang/: en-US.toml  zh-CN.toml
annasul/: Cargo.toml
annasul-marco/: .gitmodules  Cargo.toml
annasul-marco/code-standards/: .gitmodules
annasul-marco/src/: i18n.rs  lib.rs
annasul-marco/src/i18n/: attrs.rs
annasul/tests/: i18n.rs
cargo/: Cargo.toml
src/: lib.rs
src/os_impl/desktop/app/apps/: rust.rs
