[workspace]
resolver = "3"
members = ["annasul", "annasul-marco"]
[workspace.package]
version = "0.0.1"
authors = ["algosul@github.com"]
homepage = "https://github.com/algosul/annasul"
repository = "https://github.com/algosul/annasul"
keywords = ["annasul"]
license = "AGPL-3.0-only"
edition = "2024"
description = "Some user-friendly yet personalized tools"
readme = "README.md"