[workspace]
resolver = "3"
members = ["algosul", "algosul-core", "algosul-derive"]
[workspace.package]
version = "0.0.2"
authors = ["algosul@github.com"]
homepage = "https://github.com/algosul/algosul"
repository = "https://github.com/algosul/algosul"
keywords = ["algosul"]
license = "AGPL-3.0-only"
edition = "2024"
description = "Some user-friendly yet personalized tools"
readme = "README.md"