[package]
name = "algosul-core"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true

[features]
codegen = ["unicode-xid"]

[dependencies]
unicode-xid = { version = "0.2.*", optional = true }
