[package]
name = "algosul-marco"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
build = "build.rs"

[lib]
proc-macro = true

[features]

[dependencies]
algosul-core = { version = "0.0.1", path = "../algosul-core", default-features = false, features = ["i18n"] }
env_logger = "0.11.8"
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = { version = "2.0.104", features = ["full"] }
log = "0.4.27"
itertools = { version = "0.14.0" }
serde = { version = "1.*", features = ["derive"] }
strfmt = { version = "*" }