[package]
name = "algosul"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
build = "build.rs"

[lib]
name = "algosul"
crate-type = ["rlib"]

[[bin]]
name = "algosul"
path = "src/bin/main.rs"
required-features = ["app-apps", "gtk4", "glib"]

[[test]]
name = "asset"
path = "tests/asset.rs"
required-features = ["asset", "image"]

[features]
default = ["app-apps", "asset"]
app = []
app-apps = ["app", "dep:tokio", "dep:reqwest"]
asset = ["dep:toml"]
gtk4 = ["dep:gtk4"]
glib = ["dep:glib"]
marco = ["dep:algosul-marco"]
image = ["dep:image"]
[dependencies]
algosul-core = { version = "0.0.1", path = "../algosul-core", default-features = false, features = [], optional = true }
algosul-marco = { version = "0.0.1", path = "../algosul-marco", default-features = false, features = [], optional = true }
tokio = { version = "1.46.1", features = [
    "process",
    "io-util",
    "rt",
    "macros",
    "rt-multi-thread",
], optional = true }
serde = { version = "1.0.219", features = ["derive"] }
toml = { version = "0.9", optional = true }
log = { version = "0.4", features = ["serde", "kv_serde"] }
reqwest = { version = "0.11", features = ["blocking"], optional = true }
env_logger = { version = "0.11" }
gtk4 = { version = "0.9", features = ["v4_10"], optional = true }
glib = { version = "0.20", features = [], optional = true }
strfmt = { version = "0.2.5", optional = true }
sys-locale = { version = "0.3.2", optional = true }
image = { version = "0.25", optional = true } 